commit ui changes

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_svg: ^2.2.0
   intl: ^0.20.2
   fl_chart: ^1.0.0
+  dio: ^5.8.0+1
+  jwt_decoder: ^2.0.1
+  shared_preferences: ^2.5.3
 
 dev_dependencies:
   flutter_test:
