--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,10 +34,13 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^9.1.1
+  flutter_pdfview: ^1.4.1+1
   flutter_svg: ^2.2.0
-  intl: ^0.20.2
+  intl: ^0.19.0
   jwt_decoder: ^2.0.1
+  path_provider: ^2.1.5
   shared_preferences: ^2.5.3
+  syncfusion_flutter_pdfviewer: ^27.1.50
 
 dev_dependencies:
 
