--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   flutter_svg: ^2.2.0
   intl: ^0.19.0
   jwt_decoder: ^2.0.1
+  month_picker_dialog: ^6.0.3
   path_provider: ^2.1.5
   shared_preferences: ^2.5.3
   syncfusion_flutter_pdfviewer: ^27.1.50
